Add google analytics

--- a/PGDevOpsTips.Web/wwwroot/index.html
+++ b/PGDevOpsTips.Web/wwwroot/index.html
@@ -9,6 +9,16 @@
 
     <!--CSS-->
     <link href="css/site.min.css" rel="stylesheet" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X3YHQKZRN4"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-X3YHQKZRN4');
+    </script>
 </head>
 
 <body>
