Update css and js location with new bundle and minification folder bundles

--- a/PGDevOpsTips.Web/wwwroot/index.html
+++ b/PGDevOpsTips.Web/wwwroot/index.html
@@ -8,7 +8,7 @@
     <base href="/" />
 
     <!--CSS-->
-    <link href="css/site.min.css" rel="stylesheet" />
+    <link href="bundles/site.min.css" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-X3YHQKZRN4"></script>
@@ -30,7 +30,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="js/site.min.js"></script>
+    <script src="bundles/site.min.js"></script>
 </body>
 
 </html>
