Add twitter metadata #162

--- a/PGDevOpsTips.Web/wwwroot/index.html
+++ b/PGDevOpsTips.Web/wwwroot/index.html
@@ -4,7 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>PGDevOpsTips</title>
+    <title>Development and operational tips from Peter Gregg</title>
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="PGDevOpsTips - all of Peter Greggs thoughts and ideas online in one place">
+    <meta name="twitter:description" content="Find, read, download all of Peter Greggs online Articles, Resources, GitHubs, Katas, Videos, Demos, Speaking Information, Talks, Slides in one place">
+    <meta name="twitter:image" content="/images/twittercard.png">
+
     <base href="/" />
 
     <!--CSS-->
