Add open graph metadata

--- a/PGDevOpsTips.Web/wwwroot/index.html
+++ b/PGDevOpsTips.Web/wwwroot/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Development and operational tips from Peter Gregg</title>
 
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="PGDevOpsTips - all of Peter Greggs thoughts and ideas online in one place" />
+    <meta property="og:url" content="https://pgdevopstips.co.uk/" />
+    <meta property="og:site_name" content="PGDevOpsTips" />
+    <meta property="og:description" content="Find, read, download all of Peter Greggs online Articles, Resources, GitHubs, Katas, Videos, Demos, Speaking Information, Talks, Slides in one place" />
+    <meta property="og:image" content="/images/TwitterCard.PNG" />
+
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="PGDevOpsTips - all of Peter Greggs thoughts and ideas online in one place">
     <meta name="twitter:description" content="Find, read, download all of Peter Greggs online Articles, Resources, GitHubs, Katas, Videos, Demos, Speaking Information, Talks, Slides in one place">
