Rename twittercard to socialcard and update links

--- a/PGDevOpsTips.Web/wwwroot/index.html
+++ b/PGDevOpsTips.Web/wwwroot/index.html
@@ -11,12 +11,12 @@
     <meta property="og:url" content="https://pgdevopstips.co.uk/" />
     <meta property="og:site_name" content="PGDevOpsTips" />
     <meta property="og:description" content="Find, read, download all of Peter Greggs online Articles, Resources, GitHubs, Katas, Videos, Demos, Speaking Information, Talks, Slides in one place" />
-    <meta property="og:image" content="/images/TwitterCard.PNG" />
+    <meta property="og:image" content="https://www.pgdevopstips.co.uk/images/socialcard.png" />
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="PGDevOpsTips - all of Peter Greggs thoughts and ideas online in one place">
     <meta name="twitter:description" content="Find, read, download all of Peter Greggs online Articles, Resources, GitHubs, Katas, Videos, Demos, Speaking Information, Talks, Slides in one place">
-    <meta name="twitter:image" content="/images/twittercard.png">
+    <meta name="twitter:image" content="https://www.pgdevopstips.co.uk/images/socialcard.png">
 
     <base href="/" />
 
