Add metadata for google search

--- a/PGDevOpsTips.Web/wwwroot/index.html
+++ b/PGDevOpsTips.Web/wwwroot/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Development and operational tips from Peter Gregg</title>
 
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+    <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+    <meta name="description" content="Find, read, download all of Peter Greggs online Articles, Resources, GitHub Resources, Katas, Videos, Demos, Speaking Information, Talks, Slides in one place">
+    <meta name="keywords" content="azure, architecture, web, mvc, desktop, wpf, mvvm, design patterns, .net, .net core, donet, blazor, blazor components, webassembly">
+
+    <!--Open Graph Protocol Metadata-->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="PGDevOpsTips - all of Peter Greggs thoughts and ideas online in one place" />
     <meta property="og:url" content="https://pgdevopstips.co.uk/" />
@@ -13,6 +20,7 @@
     <meta property="og:description" content="Find, read, download all of Peter Greggs online Articles, Resources, GitHubs, Katas, Videos, Demos, Speaking Information, Talks, Slides in one place" />
     <meta property="og:image" content="https://www.pgdevopstips.co.uk/images/socialcard.png" />
 
+    <!--Twitter Metadata-->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="PGDevOpsTips - all of Peter Greggs thoughts and ideas online in one place">
     <meta name="twitter:description" content="Find, read, download all of Peter Greggs online Articles, Resources, GitHubs, Katas, Videos, Demos, Speaking Information, Talks, Slides in one place">
