Update base href

--- a/PGDevOpsTips.Web/wwwroot/index.html
+++ b/PGDevOpsTips.Web/wwwroot/index.html
@@ -26,7 +26,7 @@
     <meta name="twitter:description" content="Find, read, download all of Peter Greggs online Articles, Resources, GitHubs, Katas, Videos, Demos, Speaking Information, Talks, Slides in one place">
     <meta name="twitter:image" content="https://www.pgdevopstips.co.uk/images/socialcard.png">
 
-    <base href="https://petergregg.github.io/PGDevOpsTips/" />
+    <base href="https://www.pgdevopstips.co.uk/" />
 
     <!--CSS-->
     <link href="bundles/site.min.css" rel="stylesheet" />
