Revert "Add cookies popup"
This reverts commit 72ea2a9cdba457ceeac8656bd5f9aa4593a48217.

--- a/PGDevOpsTips.Web/wwwroot/index.html
+++ b/PGDevOpsTips.Web/wwwroot/index.html
@@ -30,11 +30,10 @@
 
     <!--CSS-->
     <link href="bundles/site.min.css" rel="stylesheet" />
-    <link href="_content/BytexDigital.Blazor.Components.CookieConsent/styles.min.css" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script type="text/plain" data-consent-category="google" async src="https://www.googletagmanager.com/gtag/js?id=G-X3YHQKZRN4"></script>
-    <script type="text/plain" data-consent-category="google">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X3YHQKZRN4"></script>
+    <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
