--- a/PGDevOpsTips.Web/wwwroot/index.html
+++ b/PGDevOpsTips.Web/wwwroot/index.html
@@ -80,7 +80,7 @@
     <div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
+        <button type="button" class="dismiss">🗙</button>
     </div>
     <script src="_framework/blazor.webassembly.js" autostart="false"></script>
     <script type="module">
